--- a/src/assets/css/bastion-3766bb.webflow.css
+++ b/src/assets/css/bastion-3766bb.webflow.css
@@ -1913,7 +1913,7 @@
 }
 
 .news-section {
-  padding: var(--top-padding--main) var(--side-padding--main);
+  padding: 64px;
   background-color: var(--color--light-grey);
   border-radius: 64px;
   width: 100%;
